# toolsmith

./: .gitignore  README.md  pyproject.toml
agents/: AGENTS.md  GUARDRAILS.md  shared_agent_rules.md
src/toolsmith/: __init__.py  cli.py  config.py  errors.py
src/toolsmith/commands/: __init__.py  commit_writer.py
src/toolsmith/git/: __init__.py  commit.py  diff.py  repository.py
src/toolsmith/llm/: __init__.py  base.py  ollama.py
src/toolsmith/prompts/: __init__.py  commit_writer.py
src/toolsmith/ui/: __init__.py  editor.py  prompts.py
tests/: TRACEABILITY.md
tests/integration/: __init__.py  test_commit_writer_git.py  test_git_repository.py  test_package_smoke.py
tests/unit/: __init__.py  fake_llm.py  test_cli.py  test_commit_message.py  test_commit_writer.py  test_commit_writer_prompt.py  test_config.py  test_editor.py  test_git_commit.py  test_git_diff.py  test_git_repository.py  test_imports.py  test_llm_contract.py  test_ollama_adapter.py  test_ui_prompts.py
